# Net-Manage

./: .env_example  .gitignore  LICENSE  README.md  _base_tests.ipynb  _helpers.ipynb  _nxos_tests.ipynb  _tests.ipynb  collectors.py  data_collectors.py  example_dot_env.env  helpers.py  helpers_old_do_not_use.py  hp_procurve_config_parser.ipynb  main.ipynb  net-manage.ipynb  net_discovery_with_solarwinds.ipynb  network_funcs.py  parsers.py  pyproject.toml  requirements.txt  run_collectors.py  run_validators.py  setup.py  validators.py
.streamlit/: secrets_example.toml
collectors/: cisco_asa_collectors.py  cisco_ios_collectors.py  cisco_nxos_collectors.py  collectors.py  dnac_collectors.py  f5_collectors.py  infoblox_nios_collectors.py  meraki_aio_collectors.py  meraki_collectors.py  netblox_collectors.py  netbox_collectors.py  palo_alto_collectors.py  solarwinds_collectors.py
connectors/: palo_alto_connectors.py
demos/: dnac_device_modules.st.py  nm_run_collectots_demo_st.py  run_collectors.st.py  st_run_collectors_demo.py
gists/: f5_api_call.py
helpers/: helpers.py  netbox_helpers.py  report_helpers.py
html/: run_collectors.html  setup.html  validators.html
netmanage/: __init__.py  run_collectors.py  setup.py  validators.py
notebooks/: meraki_data_collector.ipynb
playbooks/: README.md  cisco_asa_gather_facts.yml  cisco_asa_run_commands.yml  cisco_ios_gather_facts.yml  cisco_ios_get_vlan_summary.yml  cisco_ios_run_commands.yml  cisco_nxos_gather_facts.yml  cisco_nxos_get_arp_table.yml  cisco_nxos_get_inventory.yml  cisco_nxos_pre_post_checks.yml  (+55 more)
(+79 files in other folders)
